<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity">

    <views.BackgroundImageView
        app:rivColorStart="@color/accent"
        app:rivColorEnd="@color/primary"
        app:rivGradientOrientation="7"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/txtTitle"
        android:text="@string/help"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.CardView
        android:layout_margin="10dp"
        app:cardCornerRadius="16dp"
        android:layout_below="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:padding="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/btnPrivacyPolicy"
                android:padding="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/privacy_policy"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:layout_gravity="center"
                    android:src="@drawable/ic_arrow_right"
                    android:tint="@android:color/black"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <ImageView
                android:src="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <LinearLayout
                android:id="@+id/btnGitHub"
                android:padding="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/git_hub"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/git_hub_link"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <ImageView
                    android:layout_gravity="center"
                    android:src="@drawable/ic_arrow_right"
                    android:tint="@android:color/black"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <ImageView
                android:src="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <LinearLayout
                android:id="@+id/btnContact"
                android:padding="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/contact"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/contact_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </LinearLayout>

                <ImageView
                    android:layout_gravity="center"
                    android:src="@drawable/ic_arrow_right"
                    android:tint="@android:color/black"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/btnSignOut"
        android:layout_margin="10dp"
        app:cardCornerRadius="16dp"
        android:layout_above="@+id/txtVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/sign_out_title"
            android:padding="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/txtVersion"
        android:layout_margin="10dp"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="Version 1.0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>