<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragmentActivity">

    <views.BackgroundImageView
        app:rivColorStart="@color/accent"
        app:rivColorEnd="@color/primary"
        app:rivGradientOrientation="7"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <views.BackgroundImageView
        app:rivColorStart="@android:color/white"
        app:rivColorEnd="@android:color/white"
        app:rivGradientOrientation="0"
        app:rivRadius="15"
        android:layout_alignTop="@+id/llSearch"
        android:layout_alignBottom="@+id/llSearch"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/llSearch"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:elevation="2dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:tint="@android:color/black"
            android:padding="12dp"
            android:src="@drawable/ic_search"
            android:layout_gravity="center"
            android:layout_width="45dp"
            android:layout_height="45dp" />

        <EditText
            android:id="@+id/etxtSearch"
            android:imeOptions="actionDone"
            android:inputType="textVisiblePassword"
            android:hint="@string/search_for_tags_hint"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/btnErase"
            android:tint="@android:color/black"
            android:padding="12dp"
            android:src="@drawable/ic_close"
            android:layout_gravity="center"
            android:layout_width="45dp"
            android:layout_height="45dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtTagHeader"
        android:visibility="gone"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_below="@+id/llSearch"
        android:text="@string/did_you_mean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:visibility="gone"
        android:layout_below="@+id/llSearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"/>

    <TextView
        android:id="@+id/txtNoMedia"
        android:gravity="center"
        android:layout_margin="20dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_centerInParent="true"
        android:text="@string/no_media"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        app:menu_animationDelayPerItem="55"
        app:menu_backgroundColor="@android:color/transparent"
        app:menu_buttonSpacing="0dp"
        app:menu_colorNormal="@color/fab_color_normal"
        app:menu_colorPressed="@color/fab_color_pressed"
        app:menu_colorRipple="@color/fab_color_ripple"
        app:menu_fab_label="@string/fab_label"
        app:menu_fab_size="normal"
        app:menu_icon="@drawable/ic_settings"
        app:menu_labels_colorNormal="@color/fab_labels_color_normal"
        app:menu_labels_colorPressed="@color/fab_labels_color_pressed"
        app:menu_labels_colorRipple="@color/fab_labels_color_ripple"
        app:menu_labels_cornerRadius="3dp"
        app:menu_labels_ellipsize="none"
        app:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        app:menu_labels_margin="0dp"
        app:menu_labels_maxLines="-1"
        app:menu_labels_padding="8dp"
        app:menu_labels_position="left"
        app:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        app:menu_labels_showShadow="true"
        app:menu_labels_singleLine="false"
        app:menu_labels_textColor="@color/fab_labels_text_color"
        app:menu_labels_textSize="15sp"
        app:menu_openDirection="up"
        app:menu_shadowColor="@color/fab_shadow_color"
        app:menu_shadowRadius="4dp"
        app:menu_shadowXOffset="1dp"
        app:menu_shadowYOffset="4dp"
        app:menu_showShadow="true">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabItemHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_help"
            app:fab_label="@string/help"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabItemSignOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_sign_out"
            app:fab_label="@string/sign_out_title"
            app:fab_size="mini" />

    </com.github.clans.fab.FloatingActionMenu>

</RelativeLayout>